student_app/force-app/main/default/objects/Payment__c/fields/Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Number__c</fullName>
    <displayFormat>PAY-{00000}</displayFormat>
    <label>Payment Number</label>
    <type>AutoNumber</type>
</CustomField>