student_app/force-app/main/default/objects/Payment__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <formula>Student_Application__r.First_Name__c &amp; &quot; &quot; &amp; Student_Application__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>