student_app/force-app/main/default/objects/Payment__c/fields/Student_Application__c.field-meta.xml
<CustomField>
    <fullName>Student_Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student Application</label>
    <referenceTo>Student_Application__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>